--- a/public/admin.html
+++ b/public/admin.html
@@ -159,7 +159,7 @@
         height:85vh;
         flex-direction:column;
       }
-      #selecter, #searcherBenne, #createBenne {
+      #selecter, #searcherBenne, #createBenne, #createCompte {
         width:100%;
         height:5%;
         background:linear-gradient(90deg, black, grey);
@@ -658,6 +658,7 @@ benDatas[ben.id] = ben;
       }
 
 const benDatas = {};
+const comDatas = {};
       
       const selecter = document.getElementById('modifierSelecter');
         const selecterInput = [
