--- a/public/admin.html
+++ b/public/admin.html
@@ -627,6 +627,18 @@ benDatas[ben.id] = ben;
            if (statut == "statut") {
           return 'État';
         }
+         if (statut == "password") {
+          return 'Mot de passe';
+        }
+         if (statut == "first_name") {
+          return 'Prénom';
+        }
+         if (statut == "name") {
+          return 'NOM';
+        }
+         if (statut == "auth") {
+          return 'Rôle dans la société';
+        }
       }
 
  let numon;
