--- a/public/admin.html
+++ b/public/admin.html
@@ -159,7 +159,7 @@
         height:85vh;
         flex-direction:column;
       }
-      #selecter, #searcherBenne, #createBenne, #createCompte {
+      #selecter, #searcherBenne, #createBenne, #createCompte, #searcherCompte {
         width:100%;
         height:5%;
         background:linear-gradient(90deg, black, grey);
