--- a/public/admin.html
+++ b/public/admin.html
@@ -679,7 +679,12 @@ const comDatas = {};
         "latitude",
         "longitude",
         "statut"
-        ]
+        ];
+        statusOpt = [
+        {name:"Posée", value:"A", color:'yellow'},
+        {name:"Prête",value:"B", color:'red'},
+        {name:"En dépôt", value:"C", color:'blue'}
+      ];
       }
 
         async function setForComptes () {
@@ -688,7 +693,11 @@ const comDatas = {};
         "name",
         "first_name",
         "auth"
-        ]
+        ];
+          statusOpt = [
+        {name:"Conducteur", value:"driver", color:'green'},
+        {name:"Administrateur",value:"admin", color:'blue'},
+      ];
       }
       
       const selecter = document.getElementById('modifierSelecter');
@@ -721,6 +730,24 @@ const comDatas = {};
           const value = event.target.value;
           console.log("Change ", value);
           if (value == "statut") {
+            console.log(true);
+            document.getElementById('inpSelecter').style.display = "none";
+            document.getElementById('suggester').style.display = "flex";
+            document.getElementById('suggester').innerHTML="";
+            for (const opt of statusOpt) {
+              const button = document.createElement('button');
+              button.textContent = opt.name;
+              button.onclick = () => {
+                selecter.selectedIndex = 5;
+                document.getElementById('inpSelecter').value = opt.value;
+                document.getElementById('registerPop').click();
+              }
+              button.style.color = "black";
+              button.classList.add("button_status");
+              button.style.backgroundColor = opt.color;
+              document.getElementById('suggester').append(button);
+            }
+          } else if (value == "auth") {
             console.log(true);
             document.getElementById('inpSelecter').style.display = "none";
             document.getElementById('suggester').style.display = "flex";
