--- a/public/admin.html
+++ b/public/admin.html
@@ -896,7 +896,7 @@ const comDatas = {};
           const line = document.createElement('div');
           line.classList.add('line');
           line.id = `C${ben.id}`;
-benDatas[ben.id] = ben;
+comDatas[ben.id] = ben;
        const lightbox = document.getElementById('lightboxB');
        const closeBtn = document.getElementById('close-btnB');
         const imagePop = document.getElementById('lightImgB');
