--- a/public/admin.html
+++ b/public/admin.html
@@ -384,6 +384,11 @@ const offset = -((new Date().getTimezoneOffset()) / 60);
             console.log(parseFloat(mes.value)*100);
             document.getElementById('benne_progress').value = parseFloat(mes.value)*100;
           }
+             if (mes.action === 'comstatus') {
+          if (mes.who === sessionStorage.getItem('session_id')) {
+            console.log(parseFloat(mes.value)*100);
+            document.getElementById('compte_progress').value = parseFloat(mes.value)*100;
+          }
         }
       });
       }
