--- a/public/admin.html
+++ b/public/admin.html
@@ -937,6 +937,7 @@ comDatas[ben.id] = ben;
         document.getElementById('imagePop').src = ben.link;
          document.getElementById('lightH2B').textContent = "Compte n°" + ben.id;
          document.getElementById('lightPB').textContent =  ben.first_name + " " + ben.name + " | " + ben.auth;
+        document.getElementById('lightPB2').textContent =  "Euréa Coop";
         document.getElementById('lightPB3').innerHTML =  "Dernière connexion : <strong>" + ben.last_connection + "</strong> !" ;
   
         numon = ben.id;
