--- a/public/admin.html
+++ b/public/admin.html
@@ -942,7 +942,7 @@ comDatas[ben.id] = ben;
          document.getElementById('lightH2B').textContent = "Compte n°" + ben.id;
          document.getElementById('lightPB').textContent =  ben.first_name + " " + ben.name + " | " + ben.auth;
         document.getElementById('lightPB2').textContent =  "Euréa Coop";
-        document.getElementById('lightPB3').innerHTML =  "Dernière connexion : <strong>" + ben.last_connection + "</strong> !" ;
+        document.getElementById('lightPB3').innerHTML =  "Dernière connexion : <strong>" + formatTimestamp(ben.last_connection) + "</strong> !" ;
   
         numon = ben.id;
         console.log(numon);
@@ -976,7 +976,7 @@ comDatas[ben.id] = ben;
           notes.textContent = ben.password;
           line.append(notes);
           const pds = document.createElement('p');
-          pds.textContent = ben.last_connection;
+          pds.textContent = formatTimestamp(ben.last_connection);;
           line.append(pds);
           bennesContainer.append(line);
         }
@@ -1011,6 +1011,20 @@ comDatas[ben.id] = ben;
         putComptes('no');
           }}
       }
+      
+      function formatTimestamp(timestamp) {
+  const date = new Date(timestamp);
+
+  const jour = String(date.getDate()).padStart(2, '0');
+  const mois = String(date.getMonth() + 1).padStart(2, '0'); // +1 car les mois commencent à 0
+  const annee = String(date.getFullYear()).slice(-2); // Prend les 2 derniers chiffres
+
+  const heures = String(date.getHours()).padStart(2, '0');
+  const minutes = String(date.getMinutes()).padStart(2, '0');
+
+  return `${jour}/${mois}/${annee} à ${heures}h${minutes}`;
+}
+
     </script>
   </body>
 </html>
