--- a/public/admin.html
+++ b/public/admin.html
@@ -942,7 +942,7 @@ comDatas[ben.id] = ben;
          document.getElementById('lightH2B').textContent = "Compte n°" + ben.id;
          document.getElementById('lightPB').textContent =  ben.first_name + " " + ben.name + " | " + ben.auth;
         document.getElementById('lightPB2').textContent =  "Euréa Coop";
-        document.getElementById('lightPB3').innerHTML =  "Dernière connexion : <strong>" + formatTimestamp(ben.last_connection) + "</strong> !" ;
+        document.getElementById('lightPB3').innerHTML =  "Dernière connexion : <strong>" + formatTimestamp(ben.last_connection) + "</strong>" ;
   
         numon = ben.id;
         console.log(numon);
