--- a/public/admin.html
+++ b/public/admin.html
@@ -1019,7 +1019,7 @@ comDatas[ben.id] = ben;
   const mois = String(date.getMonth() + 1).padStart(2, '0'); // +1 car les mois commencent à 0
   const annee = String(date.getFullYear()).slice(-2); // Prend les 2 derniers chiffres
 
-  const heures = String(date.getHours()).padStart(2, '0');
+  const heures = String(date.getHours() + offset).padStart(2, '0');
   const minutes = String(date.getMinutes()).padStart(2, '0');
 
   return `${jour}/${mois}/${annee} à ${heures}h${minutes}`;
