--- a/public/admin.html
+++ b/public/admin.html
@@ -700,6 +700,7 @@ benDatas[ben.id] = ben;
 
 const benDatas = {};
 const comDatas = {};
+const cliDatas = {};
 let what;
       async function setForBennes () {
         what = "benne";
