--- a/public/admin.html
+++ b/public/admin.html
@@ -112,7 +112,7 @@
       <div style="display:none" id="clientsSearch">
         <div id="searcherClient">
                 <input class='input_search' type="text" id="text_searcherClient" placeholder="Recherchez un client ici...">
-                <button id="filtrerComptes" onclick="putClients(document.getElementById('text_searcherClient').value);">Filtrer</button>
+                <button id="filtrerClients" onclick="putClients(document.getElementById('text_searcherClient').value);">Filtrer</button>
                 <button onclick="putClients('no'); document.getElementById('text_searcherClient').value = '';">Réinitialiser</button>
                 <progress id="client_progress" value="0" max="100"></progress>
               </div>
