--- a/public/admin.html
+++ b/public/admin.html
@@ -186,7 +186,7 @@
         height:85vh;
         flex-direction:column;
       }
-      #selecter, #searcherBenne, #createBenne, #createCompte, #searcherCompte, #createClient, #searcherClient {
+      #selecter, #searcherBenne, #createBenne, #createCompte, #searcherCompte, #createClient, #searcherClient, #createCereale, #searcherCereale, #createParam, #searcherParam {
         width:100%;
         height:5%;
         background:linear-gradient(90deg, black, grey);
