--- a/public/admin.html
+++ b/public/admin.html
@@ -1328,7 +1328,7 @@ cliDatas[ben.id] = ben;
         }
         console.log("Le système a filtré la liste :");
         console.log(filtered);
-        const bennesContainer = document.getElementById('clientsContent');
+        const bennesContainer = document.getElementById('cerealesContent');
         bennesContainer.innerHTML = "";
         console.log("On va traiter l'ajout...");
         for (const ben of filtered) {
