--- a/public/admin.html
+++ b/public/admin.html
@@ -895,6 +895,10 @@ let what;
            document.getElementById('inpSelecter').value = comDatas[numon][value]; 
           } else if (what == "client") {
            document.getElementById('inpSelecter').value = cliDatas[numon][value]; 
+          } else if (what == "cereale") {
+           document.getElementById('inpSelecter').value = cerDatas[numon][value]; 
+          } else if (what == "param") {
+           document.getElementById('inpSelecter').value = paramDatas[numon][value]; 
           }
         });
     </script>
