--- a/public/admin.html
+++ b/public/admin.html
@@ -675,6 +675,12 @@ benDatas[ben.id] = ben;
          if (statut == "first_name") {
           return 'Prénom';
         }
+        if (statut == "code") {
+          return 'Code';
+        }
+        if (statut == "photo") {
+          return "Image d'illustration";
+        }
          if (statut == "name") {
           return 'Nom';
         }
