--- a/public/admin.html
+++ b/public/admin.html
@@ -425,6 +425,18 @@ const offset = -((new Date().getTimezoneOffset()) / 60);
             document.getElementById('client_progress').value = parseFloat(mes.value)*100;
           }
         }
+            if (mes.action === 'cerstatus') {
+          if (mes.who === sessionStorage.getItem('session_id')) {
+            console.log(parseFloat(mes.value)*100);
+            document.getElementById('cereale_progress').value = parseFloat(mes.value)*100;
+          }
+        }
+            if (mes.action === 'paramstatus') {
+          if (mes.who === sessionStorage.getItem('session_id')) {
+            console.log(parseFloat(mes.value)*100);
+            document.getElementById('param_progress').value = parseFloat(mes.value)*100;
+          }
+        }
         });
       }
 
