--- a/public/admin.html
+++ b/public/admin.html
@@ -1281,7 +1281,7 @@ cliDatas[ben.id] = ben;
           num.textContent = ben.id;
           line.append(num);
           const status = document.createElement('p');
-          status.textContent = ben.name + " | " + ben.phonenumber;
+          status.innerHTML = ben.name + " <br> " + ben.phonenumber;
           line.append(status);
           const notes = document.createElement('p');
           notes.textContent = ben.notes;
