--- a/public/admin.html
+++ b/public/admin.html
@@ -1452,7 +1452,7 @@ cerDatas[ben.id] = ben;
         }
         console.log("Le système a filtré la liste :");
         console.log(filtered);
-        const bennesContainer = document.getElementById('paramsContent');
+        const bennesContainer = document.getElementById('infosContent');
         bennesContainer.innerHTML = "";
         console.log("On va traiter l'ajout...");
         for (const ben of filtered) {
