--- a/public/admin.html
+++ b/public/admin.html
@@ -708,6 +708,9 @@ benDatas[ben.id] = ben;
           if (statut == "driver") {
           return 'Conducteur';
         }
+          if (statut == "value") {
+          return 'Valeur';
+        }
       }
 
  let numon;
