--- a/public/admin.html
+++ b/public/admin.html
@@ -357,6 +357,7 @@ const offset = -((new Date().getTimezoneOffset()) / 60);
         window.location.href = `https://${url.hostname}`; 
         }
       }
+            plotPoints();
       }
       
       start();
