--- a/public/admin.html
+++ b/public/admin.html
@@ -574,10 +574,10 @@ async function translateColor (input) {
         // 
         for (const benne of generalDatas.bennes) {
           console.log("Plotting de la benne n° ", benne.num);
-          if (benne.latitude && benne.longitude) {
-            console.log("Coordonnées : ", benne.latitude, ", ", benne.longitude);
+          if (benne.longitude && benne.latitude) {
+            console.log("Coordonnées : ", benne.longitude, ", ", benne.latitude);
             console.log(benne.statut, " → ", await translateColor(benne.statut));
-          const marker = L.circleMarker([benne.latitude, benne.longitude], {
+          const marker = L.circleMarker([benne.longitude, benne.latitude], {
             radius:10,
             color:await translateColor(benne.statut),
             fillColor:await translateColor(benne.statut),
